--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <main>
         <div class="box text-center">
-            <h1>Open the Console</h1>
+            <h1>Ecco i cognomi ordinati alfabeticamente:</h1>
             <div>
-                <p id="output"></p>
+                <ul class="list-group" id="output">
+                </ul>
+                <p id="posizione"></p>
             </div>
         </div>
     </main>
